edited the authcontroller and security config to handle the jwt token matched with the frontend, added a authresponse to handle credentials properly